--- a/public/css/toast.css
+++ b/public/css/toast.css
@@ -1,3 +1,15 @@
+#toast-box{
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 20px;
+}
+
+
 .toast {
     width: 18rem;
     height: 3.5rem;
